--- a/packages/core/fields/association/style.scss
+++ b/packages/core/fields/association/style.scss
@@ -11,7 +11,7 @@
 	flex-direction: row;
 	border-color: $wp-color-gray-light-500;
 	border-style: solid;
-	border-width: 1px 1px 0;
+	border-width: 1px;
 	box-shadow: inset 0 1px 2px rgba( 0, 0, 0, 0.07 );
 
 	.cf-search-input {
@@ -55,7 +55,7 @@
 	position: relative;
 	z-index: 0;
 	display: flex;
-	border-width: 1px;
+	border-width: 0 1px 1px;
 	border-style: solid;
 	border-color: $wp-color-gray-light-500;
 
